# app-image-classifier

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/azuraforge_cifar10/: config_schema.py  form_schema.json  pipeline.py
